--- a/src/css/partials/sign-in.css
+++ b/src/css/partials/sign-in.css
@@ -1,4 +1,34 @@
-/* Please delete */
-h2 {
-  color: green;
+.sign-up {
+  width: 1440px;
+  height: 770px;
+  background: #4F2EE8;
+}
+.modal{
+  width: 579px;
+  height: 516px;
+  flex-shrink: 0;
+  border-radius: 18px;
+  border: 2px solid #111;
+  background: #F6F6F6;
+}
+.modal-input{
+  display: flex;
+  padding: 20px 173px 20px 40px;
+  margin-bottom: 28px;
+  align-items: center;
+  gap: 10px;
+  border-radius: 40px;
+border: 2px solid #111;
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.btn-sign-up{
+display: flex;
+padding: 20px 173px;
+justify-content: center;
+align-items: flex-start;
+gap: 10px;
+border-radius: 40px;
+background: #111;
+margin-top: 40px;
+margin: auto;
 }
